welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:36: error: value Orange is not a member of object java.awt.Color
petale(Color.Orange)
             ^