welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def petale(c : Color) { 
setCouleurBrosse (c)
baisseBrosse()
leveBrosse()
avance()
droite()
avance()
baisseBrosse()
leveBrosse()
recule(2)
baisseBrosse()
leveBrosse()
avance()
gauche()
setCouleurBrosse( Color.yellow)
baisseBrosse()
leveBrosse()
setCouleurBrosse(c)
avance()
baisseBrosse()
leveBrosse()
}
def growFlowers() {
petale(Color.red)
avance()
petale(Color.cyan)
droite()
avance(4)
droite()
petale(Color.green)
recule()
droite()
avance(2)
gauche()
petale(Color.Orange)
avance(2)
gauche()
avance(2)
gauche()
petale(Color.pink)
recule(2)
}
